--- a/css/awards.css
+++ b/css/awards.css
@@ -7,5 +7,117 @@
   top: 20px;
   left: 20px;
   font-weight: 400;
-  opacity: 0.7;
+  opacity: 0.6;
+  transition: all .3s;
+}
+
+.back:hover {
+  opacity: 0.9;
+}
+
+.body-wrap {
+  text-align: center;
+  max-width: 850px;
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 30px;
+}
+
+.logo {
+  height: 260px;
+  width: auto;
+  margin: 20px auto 0 auto;
+}
+
+h1 {
+  margin: 0;
+  color: #2a2a2a;
+  font-weight: 700;
+  font-size: 3.8em;
+}
+
+.sub-cat {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 400;
+  font-size: 1.7em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 8px;
+  margin-bottom: 50px;
+}
+
+.bottom-hr {
+  width: 170px;
+  margin: 0;
+  border: solid rgba(0, 0, 0, 0.1) 2px;
+  margin-top: 10px;
+  margin-bottom: 12px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.divider {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: left;
+}
+
+.divider h3 {
+  font-weight: 700;
+  font-size: 3.2em;
+  color: #2a2a2a;
+  margin: 0;
+  text-align: left;
+}
+
+.divider hr {
+  width: 100px;
+  margin: 0;
+  border: none;
+  border-bottom: solid #193167 3px;
+  margin-top: 8px;
+}
+
+.divider p {
+  font-size: 1.8em;
+  line-height: 150%;
+  font-weight: normal;
+  color: rgba(0, 0, 0, 0.6);
+  text-align: left;
+  margin-top: 15px;
+}
+
+.divider a {
+  color: #FF0031;
+}
+
+.divider b {
+  font-weight: 700;
+}
+
+.divider i {
+  font-style: italic;
+}
+
+.divider ol {
+  list-style: decimal;
+  font-size: 1.8em;
+  color: rgba(0, 0, 0, 0.6);
+  margin-top: 15px;
+  margin-left: 40px;
+}
+
+.divider ul {
+  list-style: circle;
+  font-size: 1.8em;
+  color: rgba(0, 0, 0, 0.6);
+  margin-top: 15px;
+  margin-left: 40px;
+}
+
+.divider li {
+  margin-top: 6px;
+  line-height: 120%;
 }
